changes in index.html: i've commented the <audio> tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Le immagini dei numeri le ho prese da www.openclipart.org
 </head>
 
 <body>
-	<audio id="do" src="audio/do.mp3"></audio>
+	<!-- <audio id="do" src="audio/do.mp3"></audio>
 	<audio id="re" src="audio/re.mp3"></audio>
 	<audio id="mi" src="audio/mi.mp3"></audio>
 	<audio id="fa" src="audio/fa.mp3"></audio>
@@ -31,7 +31,7 @@ Le immagini dei numeri le ho prese da www.openclipart.org
 	<audio id="click" src="audio/click.mp3"></audio>
 	<audio id="correct2" src="audio/correct2.mp3"></audio>
 	<audio id="sbagliato" src="audio/sbagliato.mp3"></audio>
-	<audio id="rigioca" src="audio/rigioca.mp3"></audio>
+	<audio id="rigioca" src="audio/rigioca.mp3"></audio> -->
 	<br>
 
 	<!--    CONTENITORE GENERALE    -->
