added the right title to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Numbers Memory</title>
+	<title>Speed Reading and Memory Exercise</title>
 	<link rel="stylesheet" href="styles.css">
 
 	<!--	
